@@ -1,7 +1,7 @@
 Authors
 =======
 
-The secore module and accompanying documentation and testsuite (excluding
+The Xappy module and accompanying documentation and testsuite (excluding
 coverage.py) is Copyright (C) 2007 Lemur Consulting Ltd.  It is released under
 the GPL license; see the file COPYING_GPL in this directory for details.
 
