@@ -15,7 +15,7 @@
 # You should have received a copy of the GNU General Public License along
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-r"""build.py: Build the documentation for secore.
+r"""build.py: Build the documentation for Xappy.
 
 """
 __docformat__ = "restructuredtext en"
@@ -48,4 +48,4 @@ def call_epydoc(*args):
 
 call_rst2html('docs/introduction.rst', 'docs/introduction.html')
 call_rst2html('README', 'README.html')
-call_epydoc('-o', 'docs/api', '--name', 'secore', 'secore')
+call_epydoc('-o', 'docs/api', '--name', 'xappy', 'xappy')
