@@ -1,3 +1,9 @@
+Wed Sep 05 14:24:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* AUTHORS,README,build.py,secore/,xappy/__init__.py: Rename secore
+	  to xappy.  Adjust accompanying scripts and documentation
+	  accordingly.
+
 Wed Sep 05 02:23:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection_doctest2.txt: Change expected output to
